--- a/src/main/resources/application-product.yml
+++ b/src/main/resources/application-product.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://rm-2ze273nm2672986v0to.mysql.rds.aliyuncs.com:3306/sszb?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
-    username: sszb
-    password: Shangshangzhubao@
+    url: jdbc:mysql://139.224.117.116:3306/huayue?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
+    username: root
+    password: root
     druid:
       initialSize: 5
       minIdle: 5
@@ -21,6 +21,9 @@ spring:
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
       stat-view-servlet:
         allow: 127.0.0.1
+  profiles:
+     active: test
+  
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     joda-date-time-format: yyyy-MM-dd HH:mm:ss
@@ -33,9 +36,9 @@ spring:
     servlet:
       load-on-startup: 1
   redis:
-    host: 39.106.145.166
+    host: 139.224.117.116
     port: 6379
-    password: 123456
+    password: 719581][p
     timeout: 10s
     lettuce:
       pool:
@@ -73,4 +76,3 @@ token:
   jwtSecret: (XIAO:)_$^11244^%$_(WEI:)_@@++--(LAO:)_++++_.sds_(SHI:)
 server:
   port: 8888
-  
